--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="header">DoTA 2</string>
     <string name="description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
     <string name="install">Install</string>
+    <string name="review">Review &amp; Ratings</string>
+    <string name="user1">Auguste Conte</string>
+    <string name="user2">Jang Marcelino</string>
+    <string name="date">February 14, 2019</string>
+    <string name="comment">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
 </resources>
