--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="comment">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
     <string name="count_review">70M Reviews</string>
     <string name="rate">4.9</string>
+    <string name="categories1">MOBA</string>
+    <string name="categories2">MULTIPLAYER</string>
+    <string name="categories3">STRATEGY</string>
 </resources>
