--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="date">February 14, 2019</string>
     <string name="comment">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
     <string name="count_review">70M Reviews</string>
+    <string name="count_download">70M</string>
     <string name="rate">4.9</string>
 </resources>
